fix: add text overflow to chip text (#88)
* wip: add text overflow to chip text, fixed wrapping in few other places

* fix: resolve conflict

--- a/packages/web/src/components/ui/Chip/Chip.module.scss
+++ b/packages/web/src/components/ui/Chip/Chip.module.scss
@@ -2,6 +2,7 @@
 @import '~styles/responsive.scss';
 
 .chip {
+  max-width: 100%;
   cursor: pointer;
   display: inline-flex;
   align-items: center;
@@ -132,4 +133,10 @@
 .smallFont {
   font-size: 14px;
   line-height: 20px;
+}
+
+.text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
